--- a/Trabalho/web/css/Principal.css
+++ b/Trabalho/web/css/Principal.css
@@ -37,3 +37,88 @@
     background-size: auto;
     background-repeat: no-repeat;
 }
+#btnres01{
+    margin-top: -10px;
+    margin-left: 20px;
+    display: block;
+
+}
+
+#btnres02{
+    margin-top: -30px;
+    margin-left: 350px;
+    display: block;
+}
+
+#btnres03{
+    margin-top: 30px;
+    margin-left: 20px;
+    display: block;
+}
+
+#btnres04{
+    margin-top: -35px;
+    margin-left: 350px;
+    display: block;
+}
+
+
+#btnres05{
+    margin-top: 50px;
+    margin-left: 20px;
+    display: block;
+}
+
+#btnres06{
+    margin-top: -30px;
+    margin-left: 310px;
+    display: block;
+}
+
+#btnres07{
+    margin-top: 40px;
+    margin-left: 20px;
+    display: block;
+}
+
+#btnres08{
+    margin-top: -25px;
+    margin-left: 310px;
+    display: block;
+}
+
+#btnres09{
+    margin-top: 50px;
+    margin-left: 20px;
+    display: block;
+}
+
+#btnres10{
+    margin-top: -25px;
+    margin-left: 310px;
+    display: block;
+}
+
+#btnres11{
+    margin-top: 45px;
+    margin-left: 20px;
+    display: block;
+}
+
+#btnres12{
+    margin-top: -25px;
+    margin-left: 310px;
+    display: block;
+}
+
+#btnres13{
+    margin-top: 45px;
+    margin-left: 20px;
+    display: block;
+}
+
+#btnres14{
+    margin-top: 35px;
+    margin-left: 20px;
+    display: block;
+}
