Historico e detalhes gerais

--- a/Trabalho/web/css/Principal.css
+++ b/Trabalho/web/css/Principal.css
@@ -129,3 +129,11 @@
 .btn-cadasto{
     background-color: #27ae60;
 }
+
+.nav-cabeca{
+    background-color: #99ff99;
+}
+
+body{
+    background-color: #ebebeb;
+}
