--- a/Trabalho/web/css/Principal.css
+++ b/Trabalho/web/css/Principal.css
@@ -131,7 +131,13 @@
 }
 
 .nav-cabeca{
-    background-color: #99ff99;
+    background-color: #7fd681;
+}
+.container-fluid{
+    box-shadow: 0 1px 12px 0 rgba(50,50,50,.5);
+}
+.navbar-nav>li>a{
+    border-left: 1px solid #1f8620;
 }
 .btn-salvar{
     color: #333;
