--- a/Trabalho/web/css/Principal.css
+++ b/Trabalho/web/css/Principal.css
@@ -166,3 +166,19 @@ h1::after, h3::after {
 h1,h3{
   text-align: center;
 }
+
+.reserva {
+    opacity: 0;
+	visibility: hidden;
+	transform: translate3d(-50px,0,0);
+	position: absolute;
+	top: 0;
+}
+.reserva.reservada{
+opacity: 1;
+visibility: visible;
+transition: .3s;
+position: relative;
+top: auto;
+transform: translate3d(0px,0,0);
+}
