--- a/Trabalho/web/css/Principal.css
+++ b/Trabalho/web/css/Principal.css
@@ -177,7 +177,7 @@ h1,h3{
 .reserva.reservada{
 opacity: 1;
 visibility: visible;
-transition: .3s;
+transition: 2s;
 position: relative;
 top: auto;
 transform: translate3d(0px,0,0);
